# Super3

./: .gitignore  README.md  build-apks.bat  logcat_2025-12-19_17-27-07.txt
.github/workflows/: 2android.yml  android.yml
Config/: Games.xml  Supermodel.ini
Docs/: README.txt
Makefiles/: Makefile.OSX  Makefile.UNIX
Src/: GameLoader.cpp  GameLoader.h  Version.h
Src/CPU/68K/: 68K.cpp
Src/CPU/68K/Musashi/: CMakeLists.txt  m68kcpu.h
Src/CPU/PowerPC/: ppc603.c  ppc_ops.c
Src/Debugger/: SupermodelDebugger.cpp
Src/Debugger/CPU/: Z80Debug.cpp
Src/Graphics/: IRender3D.h  Render2D.cpp  Render2D.h  Shaders2D.h
Src/Graphics/Legacy3D/: Legacy3D.cpp  Legacy3D.h  Models.cpp
Src/Graphics/New3D/: Mat4.cpp  Mat4.h  Model.cpp  Model.h  New3D.cpp  New3D.h  PolyHeader.cpp  PolyHeader.h  R3DData.h  R3DFrameBuffers.cpp  R3DFrameBuffers.h  R3DScrollFog.cpp  R3DScrollFog.h  R3DShader.cpp  R3DShader.h  R3DShaderQuads.h  R3DShaderTriangles.h  Texture.cpp  Texture.h  TextureSheet.cpp  TextureSheet.h  VBO.cpp  VBO.h
Src/Inputs/: Input.cpp  Input.h  Inputs.cpp  MultiInputSource.cpp
Src/Model3/: DSB.cpp  DSB.h  IEmulator.h  Model3.cpp  Model3.h  Model3GraphicsState.h  Real3D.cpp  Real3D.h  SoundBoard.cpp  SoundBoard.h  TileGen.cpp  TileGen.h
Src/Network/: INetBoard.h  NetBoard.cpp
Src/OSD/: Audio.h  Logger.cpp  Logger.h
Src/OSD/SDL/: Audio.cpp  Main.cpp  SDLIncludes.h  SDLInputSystem.cpp  SDLInputSystem.h
Src/Sound/: SCSP.cpp  SCSP.h  SCSPDSP.cpp  SCSPLFO.cpp
Src/Sound/MPEG/: MpegAudio.cpp
Src/Util/: ConfigBuilders.cpp  NewConfig.cpp  NewConfig.h
VS2008/: Supermodel.vcxproj  Supermodel.vcxproj.filters
android/: README.md  build.gradle.kts  gradlew  gradlew.bat  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/Config/: Games.xml  Supermodel.ini
android/app/src/main/assets/GraphicsAnalysis/: DIR.txt
android/app/src/main/assets/ROMs/: DIR.txt
android/app/src/main/cpp/: CMakeLists.txt  android_input_system.cpp  android_input_system.h  android_shim.cpp  gles_presenter.cpp  gles_presenter.h  gles_stub_render3d.cpp  gles_stub_render3d.h  model3_stubs.cpp  native-lib.cpp  render2d_android.cpp
android/app/src/main/cpp/host_tools/: CMakeLists.txt
android/app/src/main/java/com/izzy2lost/super3/: AssetInstaller.kt  FlyerBitmapLoader.kt  GameXml.kt  MainActivity.kt  Super3Activity.kt  UserDataSync.kt
android/app/src/main/java/org/libsdl/app/: HIDDeviceManager.java  SDLAudioManager.java
android/app/src/main/res/drawable/: branding_watermark_24px.xml  drawer_background_rounded.xml  ic_launcher_foreground.xml  image_24px.xml  logo.xml  ripple_rounded_18.xml  view_list_24px.xml  view_module_24px.xml  wheel.xml
android/app/src/main/res/layout/: activity_main.xml  dialog_about.xml  dialog_quick_menu.xml  dialog_screenshot_preview.xml  item_flyer_variant.xml  item_game.xml  item_game_list.xml  item_save_slot.xml  nav_header.xml  overlay_controls.xml
android/app/src/main/res/values/: colors.xml  strings.xml  styles.xml  themes.xml
